--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -3,7 +3,8 @@
     <h1>顧客詳細</h1>
     <dl>
       <dt>お名前</dt>
-      <dd><%= @customer.family_name %> <%= @customer.given_name %></dd>
+      <dd><%= @customer.full_name %></dd>
+      <!-- <dd><%= @customer.family_name %> <%= @customer.given_name %></dd> -->
       <dt>電子メール</dt>
       <dd><%= @customer.email %></dd>
     </dl>
