--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -24,5 +24,13 @@
     <%= f.label :email %><br>
     <%= f.text_field :email, class: "form-control" %>
   </div>
+  <!-- Add Company Info Start -->
+  <div class="form-group">
+    <!-- <%= f.label :company_id %> -->
+    <%= f.collection_select :company_id, Company.all, :id, :name %>
+  </div>
+  <!-- Add Company Info End -->
+
+
   <%= f.submit %>
 <% end %>
