--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,21 @@
 <!-- Add Header Navigation Start -->
 <%= render partial: 'layouts/header' %>
 <!-- Add Header Navigation End -->
+<div class="container">
+  <% if notice.present? %>
+    <div class="alert alert-dismissable alert-success">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <p><%= notice %></p>
+    </div>
+  <% end %>
 
+  <% if alert.present? %>
+    <div class="alert alert-dismissable alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <p><%= alert %></p>
+    </div>
+  <% end %>
+</div>
 <%= yield %>
 
 </body>
